# fanuc_dual_arm_ros2

./: .gitignore  README.md
dexsent_description/: CMakeLists.txt  package.xml
dexsent_description/urdf/: dual_arm.xacro  fanuc_with_gripper.xacro
dexsent_moveit_config/: CMakeLists.txt  package.xml
dexsent_moveit_config/config/: dual_arm.srdf  fake_controllers.yaml  fanuc_crx10ial_gripper.srdf  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml
dexsent_moveit_config/launch/: demo.launch.py  view_dual_arm.launch.py
fanuc_crx10ia_support/: CMakeLists.txt  package.xml
fanuc_resources/: CHANGELOG.rst  CMakeLists.txt  package.xml
ros2_robotiq_gripper/robotiq_description/: CMakeLists.txt
ros2_robotiq_gripper/robotiq_description/urdf/: 2f_85.ros2_control.xacro
