<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fanuc_crx10ia_support</name>
  <version>0.1.0</version>
  <description>ROS 2 support for the Fanuc CRX-10iA.</description>
  <maintainer email="user@todo.todo">User</maintainer>
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>xacro</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
